Added mystery circle

--- a/src/components/QuestionStyles.css
+++ b/src/components/QuestionStyles.css
@@ -15,7 +15,9 @@
 	justify-content: center;
 }
 
-.mystery-circles {
+.mystery-circle {
 	height: 300px;
 	width: 300px;
+	border-radius: 50%;
+	background-color: var(--main-color);
 }
