--- a/src/components/RadioStyles.css
+++ b/src/components/RadioStyles.css
@@ -1,21 +1,25 @@
-.answer-options{
+#answer-container {
+  display: flex;
+  justify-content: center;
+}
+
+.answer-options {
   display: flex;
   flex-direction: row;
-  margin: 5px;
+  margin: 100px;
 }
-button{
+button {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: black;
-  color: white;
-  margin: 5px;
-  padding-left: 10px;
-  padding-right: 10px;
+  background-color: white;
+  margin: 15px;
+  padding-left: 20px;
+  padding-right: 20px;
   border-radius: 10%;
 }
-img{
-  width: 200px;
+img {
+  width: 180px;
   height: auto;
   border-radius: 10%;
 }
