--- a/src/components/PopUpStyles.css
+++ b/src/components/PopUpStyles.css
@@ -11,11 +11,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  border: 1px solid black;
+  border-radius: 5%;
+  width: 60%;
 }
 
 h2 {
   text-align: center;
+  color: #E85D3F;
+  font-weight: bolder;
   margin-bottom: 50px;
+  font-size: 36px;
+  line-height: 57px;
 }
 
 .pop-up-img {
@@ -26,12 +33,21 @@ h2 {
   display: flex;
   flex-direction: row;
   padding: 10px;
-  width: 60%;
-  border: 1px solid black;
+  /* width: 60%; */
   margin-bottom: 20px;
 }
 
 .pop-up-info {
   margin-left: 25px;
   line-height: 30px;
+}
+button {
+  font-weight: bold;
+  width: 63px;
+  height: 36px;
+  font-size: 24px;
+  line-height: 36px;
+  float: right;
+  background-color: #1CBD8D;
+  border-radius: 10px;
 }
