--- a/src/components/RadioStyles.css
+++ b/src/components/RadioStyles.css
@@ -1,6 +1,13 @@
+
+* {
+  font-family: 'Baloo 2', cursive;
+  font-weight: bold;
+}
+
 #answer-container {
   display: flex;
   justify-content: center;
+
 }
 
 .answer-options {
@@ -8,7 +15,17 @@
   flex-direction: row;
   margin: 100px;
 }
-button {
+label {
+  margin-right: 100px;
+
+  font-size: 24px;
+}
+input {
+  margin-right: 10px;
+  width: 30px;
+  height: .8em;
+}
+/* button {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,9 +34,12 @@ button {
   padding-left: 20px;
   padding-right: 20px;
   border-radius: 10%;
+} */
+/* button:hover{
+  border: 3px solid gold;
 }
 img {
   width: 180px;
   height: auto;
   border-radius: 10%;
-}
+} */
