--- a/src/components/PopUpStyles.css
+++ b/src/components/PopUpStyles.css
@@ -12,42 +12,45 @@
   flex-direction: column;
   align-items: center;
   border: 1px solid black;
-  border-radius: 5%;
+  border-radius: 2%;
   width: 60%;
+  padding: 40px;
 }
 
 h2 {
   text-align: center;
   color: #E85D3F;
   font-weight: bolder;
-  margin-bottom: 50px;
+  margin-bottom: 35px;
   font-size: 36px;
   line-height: 57px;
 }
 
 .pop-up-img {
-  margin-right: 25px;
+  margin-right: 30px;
+  float:left;
+  height: 254px;
 }
 
 .pop-up-details {
-  display: flex;
-  flex-direction: row;
-  padding: 10px;
-  /* width: 60%; */
   margin-bottom: 20px;
 }
 
 .pop-up-info {
-  margin-left: 25px;
   line-height: 30px;
+  float: none;
+
 }
 button {
   font-weight: bold;
   width: 63px;
   height: 36px;
-  font-size: 24px;
-  line-height: 36px;
+  font-size: 22px;
+  line-height: 40px;
   float: right;
   background-color: #1CBD8D;
+  color: white;
   border-radius: 10px;
+  border: none;
+  width: 20%;
 }
