--- a/src/components/planets/PlanetsStyle.css
+++ b/src/components/planets/PlanetsStyle.css
@@ -11,7 +11,7 @@
 
 .planetContainer {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   margin: 10px;
 }
 
@@ -24,6 +24,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 30px;
+  margin-left: 40px;
 }
 .jupiter {
   display: flex;
@@ -34,6 +35,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 30px;
+  margin-left: 40px;
 }
 .mars {
   display: flex;
@@ -43,6 +45,7 @@
   background: #fff;
   justify-content: center;
   align-items: center;
+  margin-left: 40px;
 }
 .mercury {
   display: flex;
@@ -53,6 +56,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 30px;
+  margin-left: 40px;
 }
 .neptune {
   display: flex;
@@ -62,6 +66,7 @@
   background: #fff;
   justify-content: center;
   align-items: center;
+  margin-left: 40px;
 }
 .saturn {
   display: flex;
@@ -71,6 +76,7 @@
   background: #fff;
   justify-content: center;
   align-items: center;
+  margin-left: 40px;
 }
 .uranus {
   display: flex;
@@ -81,6 +87,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 30px;
+  margin-left: 40px;
 }
 .venus {
   display: flex;
@@ -90,6 +97,7 @@
   background: #fff;
   justify-content: center;
   align-items: center;
+  margin-left: 40px;
 }
 h1 {
   background-color: #fff;
