--- a/src/components/PopUpStyles.css
+++ b/src/components/PopUpStyles.css
@@ -2,55 +2,54 @@
 }
 
 #pop-up {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 #pop-up-text {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border: 1px solid black;
-  border-radius: 2%;
-  width: 60%;
-  padding: 40px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	border: 1px solid black;
+	border-radius: 2%;
+	width: 60%;
+	padding: 40px;
 }
 
 h2 {
-  text-align: center;
-  color: #E85D3F;
-  font-weight: bolder;
-  margin-bottom: 35px;
-  font-size: 36px;
-  line-height: 57px;
+	text-align: center;
+	color: #e85d3f;
+	font-weight: bolder;
+	margin-bottom: 35px;
+	font-size: 36px;
+	line-height: 57px;
 }
 
 .pop-up-img {
-  margin-right: 30px;
-  float:left;
-  height: 254px;
+	margin-right: 30px;
+	float: left;
+	height: 254px;
 }
 
 .pop-up-details {
-  margin-bottom: 20px;
+	margin-bottom: 20px;
 }
 
 .pop-up-info {
-  line-height: 30px;
-  float: none;
-
+	line-height: 30px;
+	float: none;
 }
 button {
-  font-weight: bold;
-  width: 63px;
-  height: 36px;
-  font-size: 22px;
-  line-height: 40px;
-  float: right;
-  background-color: #1CBD8D;
-  color: white;
-  border-radius: 10px;
-  border: none;
-  width: 20%;
+	font-weight: bold;
+	width: 63px;
+	height: 36px;
+	font-size: 22px;
+	line-height: 40px;
+	float: right;
+	background-color: #1cbd8d;
+	color: white;
+	border-radius: 10px;
+	border: none;
+	width: 20%;
 }
