--- a/src/components/RadioStyles.css
+++ b/src/components/RadioStyles.css
@@ -1,29 +1,34 @@
-
 * {
-  font-family: 'Baloo 2', cursive;
-  font-weight: bold;
+	font-family: "Baloo 2", cursive;
+	font-weight: bold;
 }
-
+/* 
 #answer-container {
-  display: flex;
-  justify-content: center;
-
-}
+	display: flex;
+	justify-content: center;
+} */
 
 .answer-options {
-  display: flex;
-  flex-direction: row;
-  margin: 100px;
+	height: 0px;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	margin: 100px 0;
+	/* margin: 100px; */
 }
-label {
-  margin-right: 100px;
 
-  font-size: 24px;
+label {
+	/* margin-right: 100px; */
+	padding: 0 20px;
+	font-size: 24px;
+	margin: 0;
 }
+
 input {
-  margin-right: 10px;
-  width: 30px;
-  height: .8em;
+	margin-right: 10px;
+	height: 1rem;
+	/* width: 30px; */
+	/* height: 0.8em; */
 }
 /* button {
   display: flex;
