--- a/src/components/PopUpStyles.css
+++ b/src/components/PopUpStyles.css
@@ -6,13 +6,13 @@
 	flex-direction: column;
 	align-items: center;
   background-color: #000000B0;
-    z-index: 1;
-    position: fixed;
-    top: 0;
+  z-index: 1;
+  position: fixed;
+  top: 0;
     /* left: 0; */
-    height: 100%;
-    width: 100%;
-    overflow: auto;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
 }
 
 
@@ -28,8 +28,6 @@
   height: auto;
   width: 60%;
   margin: 150px auto;
-
-
 }
 
 h2 {
@@ -49,17 +47,21 @@ h2 {
 	margin-right: 30px;
 	float: left;
 	height: 254px;
+  background-color: white;
 }
 
 .pop-up-details {
 	margin-bottom: 20px;
+  background-color: white;
 }
 
-.pop-up-info {
+.pop-up-info>div, p{
 	line-height: 30px;
 	float: none;
   background-color: white;
-
+}
+.pop-up-info {
+  background-color: white;
 }
 button {
 	font-weight: bold;
