--- a/src/components/RadioStyles.css
+++ b/src/components/RadioStyles.css
@@ -2,11 +2,6 @@
 	font-family: "Baloo 2", cursive;
 	font-weight: bold;
 }
-/* 
-#answer-container {
-	display: flex;
-	justify-content: center;
-} */
 
 .answer-options {
 	height: 0px;
@@ -21,7 +16,7 @@ label {
 	/* margin-right: 100px; */
 	padding: 0 20px;
 	font-size: 24px;
-	margin: 0;
+	margin-top: 30px;
 }
 
 input {
@@ -30,21 +25,3 @@ input {
 	/* width: 30px; */
 	/* height: 0.8em; */
 }
-/* button {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: white;
-  margin: 15px;
-  padding-left: 20px;
-  padding-right: 20px;
-  border-radius: 10%;
-} */
-/* button:hover{
-  border: 3px solid gold;
-}
-img {
-  width: 180px;
-  height: auto;
-  border-radius: 10%;
-} */
